test/Common/LinkerScriptParsing/Errors/Memory/InvalidAttrs/Inputs/script.t
MEMORY {
  A (rxb) : ORIGIN = 0x100, LENGTH = 0x200
}